--- a/index.html
+++ b/index.html
@@ -1,34 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#C41E3A" />
-    <meta
-      name="description"
-      content="REDLINE EVENTS - Premium Event Photography in Tamil Nadu. Weddings, Corporate Events, Concerts & More. Book India's finest photographers."
-    />
-    <meta
-      name="keywords"
-      content="wedding photographer Tamil Nadu, event photography India, corporate photography, concert photography, premium wedding photographer"
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="manifest.json" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <title>
-      REDLINE EVENTS - Premium Event Photography | Weddings, Corporate & More
-    </title>
-    <script defer="defer" src="static/js/main.803742d3.js"></script>
-    <link href="static/css/main.dd0ede97.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/photo/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#C41E3A"/><meta name="description" content="REDLINE EVENTS - Premium Event Photography in Tamil Nadu. Weddings, Corporate Events, Concerts & More. Book India's finest photographers."/><meta name="keywords" content="wedding photographer Tamil Nadu, event photography India, corporate photography, concert photography, premium wedding photographer"/><link rel="apple-touch-icon" href="/photo/logo192.png"/><link rel="manifest" href="/photo/manifest.json"/><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700;800&display=swap" rel="stylesheet"><title>REDLINE EVENTS - Premium Event Photography | Weddings, Corporate & More</title><script defer="defer" src="/photo/static/js/main.24e8bef4.js"></script><link href="/photo/static/css/main.dd0ede97.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
